--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   pedantic: ^1.9.2
+  provider: ^4.3.2+2
+  image_picker: ^0.6.7+12
+  path_provider: ^1.6.21
+  path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
