--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.6.7+12
   path_provider: ^1.6.21
   path: ^1.7.0
+  sqflite: ^1.3.1+1
 
 dev_dependencies:
   flutter_test:
