Implement Google Maps API and place details screen

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.snapshot_flutter">
+    package="com.yuphilip.snapshot_flutter">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -7,8 +7,11 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="snapshot_flutter"
+        android:label="Snapshot"
         android:icon="@mipmap/ic_launcher">
+        <!-- TODO: REMOVE API KEY BEFORE COMMITING TO GITHUB! -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="ADD_API_KEY_HERE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
