--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   path_provider: ^1.6.21
   path: ^1.7.0
   sqflite: ^1.3.1+1
+  location: ^3.0.2
+  google_maps_flutter: ^1.0.3
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
